# backend/router/customer.js
@@ -44,25 +44,25 @@ customerRoute.get('/', async (req, res) => {
  * @description Create a new customer
  * @access public
  */
-customerRoute.post('/', async (req, res) => {
-    let {name, address, description, customer_type, rank_passers, companyTaxcode_business, accepted_business} = req.body
-    let customer = new Customer({
-        name: name,
-        address: address,
-        description: description,
-        customer_type: customer_type,
-        rank_passers: rank_passers,
-        companyTaxcode_business: companyTaxcode_business,
-        accepted_business: accepted_business
-    })
-    try {
-        await customer.save()
-        .then(() =>{sendSuccess(res, "Create customer successfully")})
-    }
-    catch (err) {
-        sendError(res, err);
-    }
-})
+// customerRoute.post('/', async (req, res) => {
+//     let {name, address, description, customer_type, rank_passers, companyTaxcode_business, accepted_business} = req.body
+//     let customer = new Customer({
+//         name: name,
+//         address: address,
+//         description: description,
+//         customer_type: customer_type,
+//         rank_passers: rank_passers,
+//         companyTaxcode_business: companyTaxcode_business,
+//         accepted_business: accepted_business
+//     })
+//     try {
+//         await customer.save()
+//         .then(() =>{sendSuccess(res, "Create customer successfully")})
+//     }
+//     catch (err) {
+//         sendError(res, err);
+//     }
+// })
 /**
  * @route PUT /api/customer/:id
  * @description Update a customer
@@ -79,10 +79,10 @@ customerRoute.put('/:id', async (req, res) => {
     }
     try {
         await Customer.findByIdAndUpdate(id, {name: name, address: address, description: description, customer_type: customer_type, rank_passers: rank_passers, companyTaxcode_business: companyTaxcode_business, accepted_business: accepted_business})
-        .then(() => {sendSuccess(res, 'Customer updated successfully')})
+        .then(() => {return sendSuccess(res, 'Customer updated successfully')})
     }
     catch (err) {
-        sendError(res, err);
+        return sendError(res, err);
     }
 })
 /**
